# measuring-ai-economy

./: .gitignore  CLAUDE.md  README.md
harvester/: README.md  pyproject.toml
harvester/harvester/: __init__.py  cli.py  db.py  loader.py  manifest.py  runner.py  types.py
harvester/harvester/config/: sources.yaml
harvester/harvester/discovery/: llms_txt.py  openapi.py  robots.py  scout.py  sitemap.py  types.py
harvester/harvester/etl/: arxiv.py  base.py  federal_register.py  pubmed.py  semantic_scholar.py  ssrn.py  (+2 more)
harvester/scripts/: backfill_fr_precision.py
harvester/tests/: test_calibration.py  test_citation_chain.py  test_citation_chain_expand.py  test_cli.py  test_cli_calibration.py  test_cli_chain_references.py  test_cli_check_failures.py  test_cli_check_saturation.py  test_cli_compare_sources.py  test_cli_drain_url.py  test_cli_exit_codes.py  test_cli_expand_citations.py  test_cli_scout.py  test_co_occurrence.py  test_db.py  test_discovery_llms_txt.py  test_discovery_openapi.py  test_discovery_robots.py  test_discovery_scout.py  test_discovery_sitemap.py  test_discovery_types.py  test_etl_arxiv.py  test_etl_federal_register.py  test_etl_pubmed.py  test_etl_semantic_scholar.py  test_etl_ssrn.py  test_etl_url_drain.py  test_etl_zenodo.py  test_failure_patterns.py  test_fetcher_arxiv.py  test_fetcher_crawl4ai_base.py  test_fetcher_federal_register.py  test_fetcher_http_api.py  test_fetcher_mcp_base.py  test_fetcher_pubmed.py  test_fetcher_rss_base.py  test_fetcher_semantic_scholar.py  test_fetcher_skeletons.py  test_fetcher_ssrn.py  test_fetcher_url_drain.py  (+16 more)
(+157 files in other folders)
