[project]
name = "harvester"
version = "0.1.0"
description = "AI economy measurement harvester — feeds Wintermute pipeline"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "pyarrow>=17",
    "pydantic>=2.7",
    "typer>=0.12",
    "pyyaml>=6.0",
    "neo4j>=5.20",
    "tenacity>=8.5",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
]

[project.scripts]
harvester = "harvester.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
]
html = [
    "crawl4ai>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harvester"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
